--- a/snacks.html
+++ b/snacks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eeterij Othene</title>
-    <link rel="stylesheet" href="/snacks.css">
+    <link rel="stylesheet" href="snacks.css">
 
     <!DOCTYPE html>
     <html>
