overal foto toegevoegd

--- a/openingstijden.html
+++ b/openingstijden.html
@@ -85,6 +85,10 @@
 
 </div>
 
+<div id="image-container">
+  <img src="logoeeterij.png" alt="afbeelding eeterij" class="rechts-bovenhoek">
+</div>
+
 
 </body>
 </html>
