--- a/contact-info.html
+++ b/contact-info.html
@@ -72,6 +72,11 @@
 
 </div>
 
+<div id="image-container">
+  <img src="logoeeterij.png" alt="afbeelding eeterij" class="rechts-bovenhoek">
+</div>
+
+
 
 </body>
 </html>
