friet is toegevoegd

--- a/friet.html
+++ b/friet.html
@@ -60,15 +60,23 @@
     
     <div class="header">
 
-    <H1>Friet</H1>
+    <H1>Friet:</H1>
     
 </div>
 
 <div class="tekst">
 
-<h2>hier kan je al onze friet zien:</h2>
+<h3><li>klein €2,70</li></h3>
+<h3><li>middel €3,00</li></h3>
+<h3><li>groot €3,50</li></h3>
+<h2><li>familiezakken:</li></h2>
+<h3><li>4 personen €10,50</li></h3>
+<h3><li>5 personen €14,00</li></h3>
+<h3><li>6 personen €18,00</li></h3>
 
 </div>
+
+
 
 <div id="image-container">
   <img src="logoeeterij.png" alt="afbeelding eeterij" class="rechts-bovenhoek">
