--- a/friet.html
+++ b/friet.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eeterij Othene</title>
-    <link rel="stylesheet" href="friet.css">
+    <link rel="stylesheet" href="index.css">
 
     <!DOCTYPE html>
     <html>
@@ -64,7 +64,7 @@
     
 </div>
 
-<div class="tekst">
+<div class="tekstfriet">
 
 <h3><li>klein €2,70</li></h3>
 <h3><li>middel €3,00</li></h3>
