--- a/contact-info.html
+++ b/contact-info.html
@@ -66,7 +66,7 @@
 
 <div class="tekst">
 
-<h2><a href="tel:+31 6 11 11 64 74">Bel ons: +31 6 11 11 64 74</a></h2>
+<h2><a href="tel: 0115 696 949">Bel ons: 0115 696 949</a></h2>
 <h2>Adres: Kokkeldreef 2, 4533 DD Terneuzen</h2>
 <h2></h2>
 
