kleine aanpassingen aan de font en zo

--- a/friet.html
+++ b/friet.html
@@ -60,19 +60,21 @@
     
     <div class="header">
 
-    <H1>Friet:</H1>
+    <H1 class="bold-text">Friet</H1>
     
 </div>
 
 <div class="tekstfriet">
 
-<h3><li>klein €2,70</li></h3>
-<h3><li>middel €3,00</li></h3>
-<h3><li>groot €3,50</li></h3>
-<h2><li>familiezakken:</li></h2>
-<h3><li>4 personen €10,50</li></h3>
-<h3><li>5 personen €14,00</li></h3>
-<h3><li>6 personen €18,00</li></h3>
+  <h2 class="bold-text">Porties:</h2>
+  <h3><li>Klein €2,70</li></h3>
+  <h3><li>Middel €3,00</li></h3>
+  <h3><li>Groot €3,50</li></h3>
+  <br></br>
+  <h2 class="bold-text">familiezakken:</h2>
+  <h3><li>4 personen €10,50</li></h3>
+  <h3><li>5 personen €14,00</li></h3>
+  <h3><li>6 personen €18,00</li></h3>
 
 </div>
 
