--- a/openingstijden.html
+++ b/openingstijden.html
@@ -69,18 +69,18 @@
     
     <div class="header">
 
-    <H1>Openingstijden</H1>
+    <H1 class="bold-text">Openingstijden</H1>
     
 </div>
 
 <div class="openingstijden">
-<h2>maandag gesloten</h2>
-<h2>Dinsdag gesloten</h2>
-<h2>Woensdag 16:00 - 20:00</h2>
-<h2>Donderdag 16:00 - 20:00</h2>
-<h2>Vrijdag 16:00 - 20:00</h2>
-<h2>Zaterdag 16:00 - 20:00</h2>
-<h2>Zondag 16:00 - 20:00</h2>
+<h2>Maandag: gesloten</h2>
+<h2>Dinsdag: gesloten</h2>
+<h2>Woensdag: 16:00 - 20:00</h2>
+<h2>Donderdag: 16:00 - 20:00</h2>
+<h2>Vrijdag: 16:00 - 20:00</h2>
+<h2>Zaterdag: 16:00 - 20:00</h2>
+<h2>Zondag: 16:00 - 20:00</h2>
 
 
 </div>
