--- a/friet.html
+++ b/friet.html
@@ -57,7 +57,7 @@
     
 </head>
 <body>
-    
+    <div class="achtergrondFriet">
     <div class="header">
 
     <H1 class="bold-text">Friet</H1>
@@ -84,6 +84,6 @@
   <img src="logoeeterij.png" alt="afbeelding eeterij" class="rechts-bovenhoek">
 </div>
 
-
+</div>
 </body>
 </html>
