--- a/friet.html
+++ b/friet.html
@@ -58,7 +58,7 @@
 </head>
 <body>
     <div class="achtergrondFriet">
-    <div class="header">
+    <div class="headerfriet">
 
     <H1 class="bold-text">Friet</H1>
     
